--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,11 @@
 [[constraint]]
   name = "github.com/gin-gonic/gin"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/caarlos0/env"
+  version = "3.5.0"
+
+[[constraint]]
+  name = "github.com/apsdehal/go-logger"
+  version = "1.2.0"
