--- a/pkg/views/package.json
+++ b/pkg/views/package.json
@@ -5,8 +5,29 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "express": "^4.16.4",
     "next": "^7.0.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "reflect-metadata": "^0.1.12"
+  },
+  "scripts": {
+    "start": "",
+    "dev": "yarn ts-node index.ts"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.9",
+    "@types/next": "^7.0.5",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "apollo": "^2.1.2",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6"
   }
 }
