--- a/pkg/views/package.json
+++ b/pkg/views/package.json
@@ -5,9 +5,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.10",
+    "apollo-client": "^2.4.6",
+    "apollo-link-http": "^1.5.6",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.4",
+    "graphql-tag": "^2.10.0",
     "next": "^7.0.2",
     "react": "^16.7.0-alpha.2",
+    "react-apollo": "^2.3.1",
     "react-dom": "^16.7.0-alpha.2",
     "reflect-metadata": "^0.1.12"
   },
@@ -16,15 +22,18 @@
     "dev": "yarn ts-node index.ts"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.6",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.9",
     "@types/next": "^7.0.5",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo": "^2.1.2",
     "jest": "^23.6.0",
+    "node-sass": "^4.10.0",
     "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
